--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -26,7 +26,7 @@
   }
 
   header div {
-    width: 560px;
+   max-width: 560px;
     position: absolute;
     bottom: 200px;
     left: 260px;
@@ -51,10 +51,16 @@
   
     }
     .banner div p {
-      font-size: 28px;
+      font-size: 18px;
+    }
+    .banner div h1 {
+      font-size: 24px;
+      text-align: center;
+      margin-bottom: 12px;
     }
   
   @media (max-width: 768px) {
+   
     .container-principal{
       max-width: 100%;
     }
@@ -65,42 +71,58 @@
     .container-cards{
       width: 100%;
     }
+    header {
+      position: relative;
+      text-align: center;
+
+      max-width: 100%;
+    }
+  
+    header img {
+      max-width: 100%;
+      margin-top: 2px;
+    }
     header div {
-      width: 360px;
+      width: 220px;
       position: absolute;
-      bottom: 200px;
-      left: 21px;
+      bottom: 20px;
+      left: 63px;
       z-index: 1;
       color: chartreuse;
   
     }
     .banner{
-      height: 20%;
-      background-size: auto;
+      width: 100vw;
+      height: 30%;
+      background-size: cover;
       text-align: center;
+
     }
     .banner div {
-      max-width: 100%;
+      max-width: 70%;
       text-align: center;
     }
   
     .banner div h1 {
-      font-size: 36px;
+      font-size: 21px;
       text-align: center;
     }
   
     .banner div p {
-      font-size: 26px;
+      font-size: 24px;
     }
   }
   
   @media (max-width: 550px) {
   
     .banner div h1 {
-      font-size: 26px;
+      font-size: 21px;
+      margin-bottom: 40px;
     }
   
     .banner div p {
-      font-size: 18px;
+      font-size: 15px;
+      display: none;
     }
+
   }
